--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ h1 {
 h2 {
 	line-height: 20px;
 	margin: 0;
-	color: #25BAD0;
+	color: lightgreen;
 	margin-bottom: 30px;
 	font-size: 40px;
 	font-weight: 400;
@@ -75,34 +75,34 @@ ul, ol {
 	transition: all 0.8s;
 }
 #menu.navbar-default {
-	background-color: rgba(248, 248, 248, 0);
-	border-color: rgba(231, 231, 231, 0);
+	background-color: black/*rgba(248, 248, 248, 0)*/;
+	border-color: green/*rgba(231, 231, 231, 0)*/;
 }
 #menu a.navbar-brand {
 	font-size: 13px;
-	color: rgba(255,255,255,0.8);
+	color: lightgreen/*rgba(255,255,255,0.8)*/;
 	font-weight: 500;
 	text-transform: uppercase;
 	letter-spacing: 1px;
 }
 #menu a.navbar-brand i.fa {
-	color: #25BAD0;
+	color: /*#25BAD0*/lightgreen;
 }
 #menu.navbar-default .navbar-nav > li > a {
 	text-transform: uppercase;
-	color: rgba(255,255,255,0.8);
+	color: lightgreen/*rgba(255,255,255,0.8)*/;
 	font-size: 12px;
 	letter-spacing: 1px;
 }
 #menu.navbar-default .navbar-nav > li > a:hover {
-	color: #25BAD0;
+	color: white/*#25BAD0*/;
 }
 .on {
 	background-color: #03252b !important;
 	padding: 0 !important;
 }
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-	color: #25BAD0 !important;
+	color: white/*#25BAD0*/ !important;
 	background-color: transparent;
 }
 .navbar-toggle {
@@ -116,9 +116,9 @@ ul, ol {
 	background-color: #FFF;
 }
 .btn-default {
-	color: #25BAD0;
+	color: /*#25BAD0*/lightgreen;
 	background-color: transparent;
-	border: 2px solid #25BAD0;
+	border: 2px solid /*#25BAD0*/lightgreen;
 	padding: 12px 20px;
 	margin: 0;
 	font-size: 15px;
@@ -147,7 +147,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	height: auto;
 	text-align: center;
 	color: #fff;
-	background: url(../img/intro-bg.jpg) no-repeat center center;
+	background: url(../img/img_01.png) no-repeat center center;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
@@ -171,7 +171,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#053740', end
 	color: rgba(255,255,255,0.9);
 }
 .intro .brand {
-	color: #25BAD0;
+	color: /*#25BAD0*/lightgreen;
 	font-weight: 700;
 }
 .intro .intro-text p {
@@ -218,7 +218,7 @@ header .intro-text {
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#20a6bb', endColorstr='#25bad0', GradientType=0 ); /* IE6-9 */
 }
 #about h2 {
-	color: rgba(255,255,255,0.8);
+	color: lightgreen/*rgba(255,255,255,0.8)*/;
 }
 #about h4 {
 	color: #0a4b55;
@@ -370,10 +370,10 @@ ol.type li a:hover {
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#20a6bb', endColorstr='#25bad0', GradientType=0 ); /* IE6-9 */
 }
 #team h2 {
-	color: rgba(255,255,255,0.8);
+	color: lightgreen/*rgba(255,255,255,0.8)*/;
 }
 #team h3 {
-	color: #0a4b55;
+	color: /*#0a4b55*/lightgreen;
 }
 img.img-circle.team-img {
 	width: 160px;
@@ -389,7 +389,7 @@ img.img-circle.team-img {
 }
 /* Contact Section */
 #contact {
-	background: url(../img/contact-bg.jpg) no-repeat center top;
+	background: url(../img/img_02.png) no-repeat center top;
 	background-color: #7bc3d1;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
