--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4896,8 +4896,8 @@ a.badge:focus {
   padding: 4px;
   margin-bottom: 20px;
   line-height: 1.42857143;
-  background-color: #fff;
-  border: 1px solid #ddd;
+  /*background-color: #fff;*/
+  border: 1px solid lightgreen;
   border-radius: 4px;
   -webkit-transition: border .2s ease-in-out;
        -o-transition: border .2s ease-in-out;
