--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ h2 {
 	padding-bottom: 10px;
 }
 h3, h4 {
-	color: #333;
+	color: lightgreen;
 	font-size: 20px;
 	font-weight: 400;
 }
@@ -28,6 +28,7 @@ h5 {
 	text-transform: uppercase;
 	font-weight: 700;
 	line-height: 20px;
+	color: white;
 }
 p {
 	font-size: 15px;
@@ -188,6 +189,7 @@ header .intro-text {
 }
 /* Services Section */
 #services {
+	border-top: solid 1px green; 
 	padding: 120px 0;
 	background: /*#053740*/#060a0a;
 	height: 100%;
@@ -210,9 +212,10 @@ header .intro-text {
 }
 /* About Section */
 #about {
+	border-top: solid 1px green; 
 	padding: 100px 0;
 	color: rgba(255,255,255,0.9);
-	background: /*#053740*/#0d1414;
+	background: /*#053740*/#060a0a;
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#20a6bb+0,25bad0+50 */
 	/*background: rgb(32,166,187); /* Old browsers */*/
 	/*background: -moz-linear-gradient(top, rgba(32,166,187,1) 0%, rgba(37,186,208,1) 50%); /* FF3.6-15 */*/
@@ -401,6 +404,7 @@ img.img-circle.team-img {
 	-o-background-size: cover;
 }
 #contact .overlay {
+	border-top: solid 1px green; 
 	padding: 100px 0 40px 0;
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#053740+0,053740+100&1+0,0.75+100 */
 	background: -moz-linear-gradient(top, rgba(5,55,64,1) 0%, rgba(5,55,64,0.75) 100%); /* FF3.6-15 */
