--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,13 @@ h1 {
 h2 {
 	line-height: 15px;
 	margin: 0;
-	color: lightgreen;
+	color: white;
 	margin-bottom: 30px;
 	font-size: 40px;
 	font-weight: 400;
 	text-transform: uppercase;
 	padding-bottom: 10px;
+	text-shadow: 3px 3px 10px lightgreen;
 }
 h3, h4 {
 	color: lightgreen;
@@ -81,11 +82,12 @@ ul, ol {
 }
 #menu a.navbar-brand {
 	font-size: 13px;
-	color: green/*rgba(255,255,255,0.8)*/;
+	color: lightgreen/*rgba(255,255,255,0.8)*/;
 	/*font-weight: 500;*/
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	margin-bottom: 0px;
+	text-shadow: 2px 2px 8px darkgreen;
 }
 #menu a.navbar-brand i.fa {
 	color: /*#25BAD0*/lightgreen;
@@ -174,7 +176,8 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	color: rgba(255,255,255,0.9);
 }
 .intro .brand {
-	color: /*#25BAD0*/lightgreen;
+	text-shadow: 2px 2px 8px green;
+	color: /*#25BAD0*/#edf7dd;
 	font-weight: 700;
 }
 .intro .intro-text p {
@@ -196,7 +199,7 @@ header .intro-text {
 	height: 100%;
 }
 #services h4 {
-	color: /*#25BAD0*/lightgreen;
+	color: /*#25BAD0*/white;
 	text-transform: uppercase;
 }
 #services i.fa {
@@ -225,7 +228,7 @@ header .intro-text {
 /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#20a6bb', endColorstr='#25bad0', GradientType=0 ); /* IE6-9 */*/
 }
 #about h2 {
-	color: lightgreen/*rgba(255,255,255,0.8)*/;
+	color: white/*rgba(255,255,255,0.8)*/;
 }
 #about h4 {
 	color: #0a4b55;
