--- a/css/style.css
+++ b/css/style.css
@@ -401,7 +401,7 @@ img.img-circle.team-img {
 /* Contact Section */
 #contact {
 	background: url(../img/nat1.jpg) no-repeat center top;
-	background-color: #7bc3d1;
+	background-color: #060a0a;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
@@ -415,7 +415,7 @@ img.img-circle.team-img {
 	background: -moz-linear-gradient(top, rgba(5,55,64,1) 0%, rgba(5,55,64,0.75) 100%); /* FF3.6-15 */
 	background: -webkit-linear-gradient(top, rgba(5,55,64,1) 0%, rgba(5,55,64,0.75) 100%); /* Chrome10-25,Safari5.1-6 */
 	background: linear-gradient(to bottom, rgba(234, 252, 255, 0) 0%, rgba(0, 33, 20, 0.51) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#053740', endColorstr='#bf053740', GradientType=0 ); /* IE6-9 */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#053740', endColorstr='#bf053740', GradientType=0 ); /* IE6-9 */
 }
 #contact h3 {
 	padding-top: 20px;
@@ -524,13 +524,4 @@ color: #ccc;
 	#about img {
 		margin-bottom: 20px;
 	}
-}
-
-.inputfile {
-	width: 0.1px;
-	height: 0.1px;
-	opacity: 0;
-	overflow: hidden;
-	position: absolute;
-	z-index: -1;
 }
