--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ ul, ol {
 }
 /* Navigation */
 #menu {
-	padding: 20px;
+	padding: 6px;
 	transition: all 0.8s;
 }
 #menu.navbar-default {
@@ -81,7 +81,7 @@ ul, ol {
 	border-color: green/*rgba(231, 231, 231, 0)*/;
 }
 #menu a.navbar-brand {
-	font-size: 13px;
+	font-size: 12px;
 	color: lightgreen/*rgba(255,255,255,0.8)*/;
 	/*font-weight: 500;*/
 	text-transform: uppercase;
@@ -195,8 +195,9 @@ header .intro-text {
 #services {
 	border-top: solid 1px green; 
 	padding: 120px 0;
+	padding-bottom: 50px;
 	background: /*#053740*/#060a0a;
-	height: 100%;
+	height: 108%;
 }
 #services h4 {
 	color: /*#25BAD0*/white;
@@ -409,7 +410,7 @@ img.img-circle.team-img {
 }
 #contact .overlay {
 	border-top: solid 1px green; 
-	padding: 100px 0 40px 0;
+	padding: 106px 0 1px 0;
 	/*background-color: #060a0a;*/
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#053740+0,053740+100&1+0,0.75+100 */
 	background: -moz-linear-gradient(top, rgba(5,55,64,1) 0%, rgba(5,55,64,0.75) 100%); /* FF3.6-15 */
