--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,7 @@ header .intro-text {
 	font-size: 32px;
 	margin-bottom: 20px;
 	transition: all 0.5s;
-	color: #053740;
+	color: black;
 	width: 100px;
 	height: 100px;
 	padding: 28px 0;
