--- a/css/style.css
+++ b/css/style.css
@@ -109,15 +109,15 @@ ul, ol {
 	padding: 0 !important;
 }
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-	color: white/*#25BAD0*/ !important;
+	color: white !important;
 	background-color: transparent;
 }
 .navbar-toggle {
 	border-radius: 0;
 }
 .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-	background-color: #25BAD0;
-	border-color: #25BAD0;
+	background-color: #000000;
+	border-color: #008c27;
 }
 .navbar-default .navbar-toggle:hover>.icon-bar {
 	background-color: #FFF;
@@ -160,6 +160,11 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	background-size: cover;
 	-o-background-size: cover;
 }
+/*.navbar .overlaynav{
+	background: url(../img/nepal.png) no-repeat;
+	background-size: contain;
+
+}*/
 .intro .overlay {
 	padding: 120px 0;
 	/*background-color: #060a0a;*/
