--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body, html {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Merriweather', serif;;
 	text-rendering: optimizeLegibility !important;
 	-webkit-font-smoothing: antialiased !important;
 	color: rgba(255,255,255,0.5);
