--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1089,8 +1089,8 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
-  color: #333;
-  background-color: #fff;
+  color: #060a0a;
+  background-color: #060a0a;
 }
 input,
 button,
