--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	width: 100%;
 	height: auto;
 	text-align: center;
-	color: #fff;
+	color: #060a0a;
 	background: url(../img/nat2.gif) no-repeat center center;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
