--- a/css/style.css
+++ b/css/style.css
@@ -477,8 +477,12 @@ label {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  background: url('https://cdn1.iconfinder.com/data/icons/hawcons/32/698394-icon-130-cloud-upload-512.png') center center no-repeat #e4e4e4;
+  /*background: url('https://cdn1.iconfinder.com/data/icons/hawcons/32/698394-icon-130-cloud-upload-512.png') center center no-repeat #e4e4e4;*/
   /*border-radius: 20px;*/
+  background-size: 60px 60px;
+}
+.form-group .overlayfile{
+  background: url('https://cdn1.iconfinder.com/data/icons/hawcons/32/698394-icon-130-cloud-upload-512.png') center center no-repeat;
   background-size: 60px 60px;
 }
 #contact .form-control:focus {
